blackroad-sf/force-app/main/default/objects/Agent__c/Agent__c.object-meta.xml
<CustomObject>
    <label>Agent</label>
    <pluralLabel>Agents</pluralLabel>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>BlackRoad OS Agent Registry — $0 cost, self-hosted Pi fleet. Source of truth for all 193+ agents.</description>
</CustomObject>