blackroad-sf/force-app/main/default/objects/Agent__c/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <label>Agent ID</label>
    <type>Text</type>
        <length>100</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
    
</CustomField>