blackroad-sf/force-app/main/default/objects/Agent__c/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <label>Capabilities</label>
    <type>LongTextArea</type>
        <length>32768</length>
    
</CustomField>