blackroad-sf/force-app/main/default/objects/Agent__c/fields/DeployTarget__c.field-meta.xml
<CustomField>
    <fullName>DeployTarget__c</fullName>
    <label>Deploy Target</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>cloudflare_worker</fullName>
                <default>true</default>
                <label>cloudflare_worker</label>
            </value>
            <value>
                <fullName>octavia_pi</fullName>
            </value>
            <value>
                <fullName>lucidia_pi</fullName>
            </value>
            <value>
                <fullName>cecilia_pi</fullName>
            </value>
            <value>
                <fullName>mac_gateway</fullName>
            </value>
            <value>
                <fullName>railway</fullName>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>