blackroad-sf/force-app/main/default/objects/Agent__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Text</type>
        <length>100</length>
    
</CustomField>