blackroad-sf/force-app/main/default/objects/Agent__c/fields/GenesisHash__c.field-meta.xml
<CustomField>
    <fullName>GenesisHash__c</fullName>
    <label>Genesis Hash</label>
    <type>Text</type>
        <length>64</length>
    
</CustomField>