blackroad-sf/force-app/main/default/objects/Agent__c/fields/IsTokenless__c.field-meta.xml
<CustomField>
    <fullName>IsTokenless__c</fullName>
    <label>Is Tokenless</label>
    <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    
</CustomField>