blackroad-sf/force-app/main/default/objects/Agent__c/fields/LastActive__c.field-meta.xml
<CustomField>
    <fullName>LastActive__c</fullName>
    <label>Last Active</label>
    <type>DateTime</type>
    
</CustomField>