blackroad-sf/force-app/main/default/objects/Agent__c/fields/OllamaModel__c.field-meta.xml
<CustomField>
    <fullName>OllamaModel__c</fullName>
    <label>Ollama Model</label>
    <type>Text</type>
        <length>100</length>
    
</CustomField>