blackroad-sf/force-app/main/default/objects/Agent__c/fields/Pantheon__c.field-meta.xml
<CustomField>
    <fullName>Pantheon__c</fullName>
    <label>Pantheon</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>Named</fullName>
                <default>true</default>
                <label>Named</label>
            </value>
            <value>
                <fullName>Norse</fullName>
            </value>
            <value>
                <fullName>Egyptian</fullName>
            </value>
            <value>
                <fullName>Celtic</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>