blackroad-sf/force-app/main/default/objects/Agent__c/fields/Personality__c.field-meta.xml
<CustomField>
    <fullName>Personality__c</fullName>
    <label>Personality</label>
    <type>LongTextArea</type>
        <length>32768</length>
    
</CustomField>