blackroad-sf/force-app/main/default/objects/Agent__c/fields/PiIP__c.field-meta.xml
<CustomField>
    <fullName>PiIP__c</fullName>
    <label>Pi IP Address</label>
    <type>Text</type>
        <length>50</length>
    
</CustomField>