blackroad-sf/force-app/main/default/objects/Agent__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>local_ollama</fullName>
                <default>true</default>
                <label>local_ollama</label>
            </value>
            <value>
                <fullName>cloudflare</fullName>
            </value>
            <value>
                <fullName>anthropic</fullName>
            </value>
            <value>
                <fullName>openai</fullName>
            </value>
            <value>
                <fullName>grok</fullName>
            </value>
            <value>
                <fullName>custom</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>