blackroad-sf/force-app/main/default/objects/Agent__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Text</type>
        <length>200</length>
    
</CustomField>