blackroad-sf/force-app/main/default/objects/Agent__c/fields/SourceRepo__c.field-meta.xml
<CustomField>
    <fullName>SourceRepo__c</fullName>
    <label>Source Repo</label>
    <type>Text</type>
        <length>200</length>
    
</CustomField>