blackroad-sf/force-app/main/default/objects/Agent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <default>true</default>
                <label>active</label>
            </value>
            <value>
                <fullName>spawning</fullName>
            </value>
            <value>
                <fullName>idle</fullName>
            </value>
            <value>
                <fullName>offline</fullName>
            </value>
            <value>
                <fullName>deprecated</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
    
</CustomField>