blackroad-sf/force-app/main/default/objects/Agent__c/fields/SuccessRate__c.field-meta.xml
<CustomField>
    <fullName>SuccessRate__c</fullName>
    <label>Success Rate %</label>
    <type>Percent</type>
        <precision>5</precision>
        <scale>1</scale>
    
</CustomField>