blackroad-sf/force-app/main/default/objects/Agent__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <type>Text</type>
        <length>10</length>
    
</CustomField>