blackroad-sf/force-app/main/default/objects/Agent__c/fields/TotalTasks__c.field-meta.xml
<CustomField>
    <fullName>TotalTasks__c</fullName>
    <label>Total Tasks</label>
    <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    
</CustomField>