blackroad-sf/force-app/main/default/objects/Agent__c/fields/WorkerURL__c.field-meta.xml
<CustomField>
    <fullName>WorkerURL__c</fullName>
    <label>Worker URL</label>
    <type>Url</type>
    
</CustomField>